// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> with \`autoresize\` prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium k-TextInput__isTextarea"
>
  <textarea
    className="k-TextInput"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="text"
    onChange={[Function]}
    rows={1}
    style={
      Object {
        "lineHeight": "1.125rem",
      }
    }
  />
  <div
    className="k-TextInput__textareaGradient"
  />
</div>
`;

exports[`<TextInput /> with \`center\` prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput k-TextInput--alignCenter"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="text"
    onChange={[Function]}
  />
</div>
`;

exports[`<TextInput /> with \`darkBackground\` prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput k-TextInput--darkBackground"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="text"
    onChange={[Function]}
  />
</div>
`;

exports[`<TextInput /> with \`digits\` prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium k-TextInput__wrapper--hasDigits"
>
  <input
    className="k-TextInput k-TextInput-hasDigits k-TextInput-hasDigits_12"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="text"
    onChange={[Function]}
    style={
      Object {
        "--input-content-width": 12,
      }
    }
  />
</div>
`;

exports[`<TextInput /> with \`disabled\` prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput k-TextInput--disabled"
    defaultValue=""
    disabled={true}
    id="TextInput"
    name="text"
    onChange={[Function]}
  />
</div>
`;

exports[`<TextInput /> with \`error\` prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput k-TextInput--error"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="text"
    onChange={[Function]}
  />
</div>
`;

exports[`<TextInput /> with \`has=button buttonIsInset\` props matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium k-TextInput__wrapper--button_inset"
>
  <input
    className="k-TextInput k-TextInput--hasButton"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="text"
    onChange={[Function]}
  />
  <button
    className="k-TextInput__button"
    rounded={false}
    size="medium"
    type="button"
  >
    Hello world
  </button>
</div>
`;

exports[`<TextInput /> with \`has=button\` prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput k-TextInput--hasButton"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="text"
    onChange={[Function]}
  />
  <button
    className="sc-gsDKAQ iZecDk k-Button k-TextInput__button k-Button--medium k-Button--hydrogen k-Button--fit-content"
    style={
      Object {
        "--Button-border-radius": null,
        "--Button-bullet-color": null,
      }
    }
    type="button"
  >
    Hello world
  </button>
</div>
`;

exports[`<TextInput /> with \`has=icon iconPosition=right\` props matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium k-TextInput__wrapper--icon_right"
>
  <input
    className="k-TextInput k-TextInput--hasIcon"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="text"
    onChange={[Function]}
  />
  <span
    aria-hidden="true"
    className="k-TextInput__icon"
  >
    <svg />
  </span>
</div>
`;

exports[`<TextInput /> with \`has=icon\` prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium k-TextInput__wrapper--icon_left"
>
  <input
    className="k-TextInput k-TextInput--hasIcon"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="text"
    onChange={[Function]}
  />
  <span
    aria-hidden="true"
    className="k-TextInput__icon"
  >
    <svg />
  </span>
</div>
`;

exports[`<TextInput /> with \`has=limit\` prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput k-TextInput--hasLimit"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="text"
    onChange={[Function]}
  />
  <div
    className="k-TextInput__limitNumber"
  >
    90
  </div>
</div>
`;

exports[`<TextInput /> with \`has=unit unitIsWord\` props matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium k-TextInput__wrapper--hasUnit"
>
  <input
    className="k-TextInput k-TextInput--hasUnit"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="text"
    onChange={[Function]}
  />
  <span
    className="k-TextInput__unit k-TextInput__unit--unitIsWord"
  >
    grand
  </span>
</div>
`;

exports[`<TextInput /> with \`has=unit\` prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium k-TextInput__wrapper--hasUnit"
>
  <input
    className="k-TextInput k-TextInput--hasUnit"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="text"
    onChange={[Function]}
  />
  <span
    className="k-TextInput__unit"
  >
    €
  </span>
</div>
`;

exports[`<TextInput /> with \`name\` prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="foobar"
    onChange={[Function]}
  />
</div>
`;

exports[`<TextInput /> with \`size\` prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="text"
    onChange={[Function]}
  />
</div>
`;

exports[`<TextInput /> with \`tag\` prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="text"
    onChange={[Function]}
  />
</div>
`;

exports[`<TextInput /> with \`textarea\` tag matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium k-TextInput__isTextarea"
>
  <textarea
    className="k-TextInput"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="message"
    onChange={[Function]}
  />
  <div
    className="k-TextInput__textareaGradient"
  />
</div>
`;

exports[`<TextInput /> with \`valid\` prop matches with snapshot 1`] = `
<div
  className="sc-bdvvtL gBhpAK k-TextInput__wrapper k-TextInput__wrapper--medium"
>
  <input
    className="k-TextInput k-TextInput--valid"
    defaultValue=""
    disabled={false}
    id="TextInput"
    name="text"
    onChange={[Function]}
  />
</div>
`;
